[UPDATE] update product entity